@@ -710,14 +710,14 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 ; videosupport		      videosupport
 ; maxcallbitrate	      maxcallbitrate
 ; rfc2833compensate           mailbox
-; session-timers             busylevel
+; session-timers              busylevel
 ; session-expires            
-; session-minse              template
-; session-refresher          fromdomain
-;                            regexten
-;                            fromuser
-;                            host
-;                            port
+; session-minse               template
+; session-refresher           fromdomain
+; t38pt_usertpsource          regexten
+;                             fromuser
+;                             host
+;                             port
 ;                             qualify
 ;                             defaultip
 ;                             defaultuser
@@ -735,7 +735,7 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 ;                             timert1
 ;                             timerb
 ;                             qualifyfreq
-
+;                             t38pt_usertpsource
 
 ;[sip_proxy]
 ; For incoming calls only. Example: FWD (Free World Dialup)
@@ -956,3 +956,7 @@ srvlookup=yes			; Enable DNS SRV lookups on outbound calls
 ;host=dynamic
 ;rfc2833compensate=yes		; Compensate for pre-1.4 DTMF transmission from another Asterisk machine.
 				; You must have this turned on or DTMF reception will work improperly.
+;t38pt_usertpsource=yes         ; Use the source IP address of RTP as the destination IP address for UDPTL packets
+                                ; if the nat option is enabled. If a single RTP packet is received Asterisk will know the
+                                ; external IP address of the remote device. If port forwarding is done at the client side
+                                ; then UDPTL will flow to the remote device.
