@@ -97,6 +97,7 @@ SIP Changes
    the register line.
  * Added support for T140 RED - redundancy in T.140 to prevent text loss due to
    lost packets.
+ * Added t38pt_usertpsource option. See sip.conf.sample for details.
 
 IAX Changes
 -----------
